<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetaiActivity">



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            tools:src="@drawable/user1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="62"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
            app:layout_constraintStart_toStartOf="@id/textView4"
            app:layout_constraintEnd_toEndOf="@id/textView4"
            app:layout_constraintTop_toTopOf="@+id/ivProfile" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/repository"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toBottomOf="@+id/tvRepo" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="22.4K"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/ivProfile" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:text="@string/followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="66"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/ivProfile" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/following"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            tools:text="Jake Wharathon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfile" />
        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            tools:text="username"/>

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            tools:text="Google,Inc."
            tools:drawableLeft="@drawable/ic_home_work"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            tools:text="London"
            tools:drawableLeft="@drawable/ic_location"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCompany" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvLocation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tbLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvLocation"
            tools:visibility="visible"
            android:visibility="gone"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

